--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="modal-root"></div>
-    <div id="app"></div>
+    <div id="root"></div>
   </body>
 </html>
